search-engine: Reset duplicates cache when search finishes

Fixing the handling of duplicated search results in commit 7f04862
exposed a different bug: as the duplicates cache is never reset,
previously matched results are ignored in subsequent searches (e.g.
when adding/removing characters to the search terms that should not
change the result set).

https://bugzilla.gnome.org/show_bug.cgi?id=683495